<resources>
    <string name="app_name">Rubbish_Android</string>
    <string name="logo_text">RUBBISH</string>
    <string name="login_insert_name_hint">닉네임을 입력해주세요</string>
    <string name="login_insert_pass_hint">비밀번호를 입력해주세요</string>
    <string name="login">로그인</string>

    <string name="register">회원가입</string>
    <string name="register_question">RUBBISH가 처음이신가요?</string>

    <string name="certify_insert_your_email">이메일을 입력해주세요</string>
    <string name="certify_send_code">인증코드 보내기</string>
    <string name="certify_email_code_text">이메일 인증 코드</string>
    <string name="certify">인증하기</string>

    <string name="register_nick_name_hint">닉네임을 입력해주세요</string>
    <string name="register_pass_hint">비밀번호를 입력해주세요 (숫자 6자리)</string>
    <string name="start">시작하기</string>
    
    <string name="login_error_title">로그인 실패</string>
    <string name="login_error_content">닉네임 또는 비밀번호를 입력해주세요.</string>

    <string name="send_email_error_title">인증 코드 전송 실패</string>
    <string name="send_email_error_content">이메일을 입력해주세요.</string>
    <string name="send_email_success_title">인증 코드가 발송되었습니다.</string>
    <string name="send_email_success_content">이메일을 확인해주세요.</string>
    <string name="send_email_fail_content">이미 사용 중인 이메일 입니다.</string>
    <string name="certify_success_title">인증되었습니다.</string>
    <string name="certify_success_content">회원가입을 진행해주세요.</string>
    <string name="certify_fail_title">인증 실패</string>
    <string name="certify_fail_content">이메일을 다시 확인해주세요.</string>
    <string name="certify_code_wrong_title">인증번호가 일치하지 않습니다.</string>
    <string name="certify_code_wrong_content">인증번호를 다시 확인해주세요.</string>
    <string name="register_success_title">회원가입에 성공하였습니다.</string>
    <string name="register_success_content">로그인 후 서비스를 이용해주세요.</string>
    <string name="register_empty_error_title">회원가입 실패</string>
    <string name="register_empty_error_content">빈칸을 채워주세요.</string>
    <string name="register_not_exist_error_title">회원가입 실패</string>
    <string name="register_not_exist_error_content">인증되지 않거나 존재하지 않는 이메일입니다.</string>
    <string name="register_406_error_title">회원가입 실패</string>
    <string name="register_406_error_content">사용 중인 닉네임 혹은 잘못된 비밀번호 형식</string>
    <string name="register_200_fail_content">이메일, 닉네임, 비밀번호를 확인해주세요.</string>
    <string name="login_success_title">로그인에 성공하였습니다.</string>
    <string name="login_success_content">환영합니다!</string>
    <string name="login_fail_title">로그인에 실패했습니다.</string>
    <string name="login_fail_content">닉네임 또는 비밀번호를 확인해주세요.</string>

    <string name="login_error_title">로그인 실패</string>
    <string name="login_error_content">닉네임 또는 비밀번호를 입력해주세요.</string>

    <string name="send_email_error_title">인증 코드 전송 실패</string>
    <string name="send_email_error_content">이메일을 입력해주세요.</string>
    <string name="send_email_success_title">인증 코드가 발송되었습니다.</string>
    <string name="send_email_success_content">이메일을 확인해주세요.</string>
    <string name="send_email_fail_content">이미 사용 중인 이메일 입니다.</string>
    <string name="certify_success_title">인증되었습니다.</string>
    <string name="certify_success_content">회원가입을 진행해주세요.</string>
    <string name="certify_fail_title">인증 실패</string>
    <string name="certify_fail_content">이메일을 다시 확인해주세요.</string>
    <string name="certify_code_wrong_title">인증번호가 일치하지 않습니다.</string>
    <string name="certify_code_wrong_content">인증번호를 다시 확인해주세요.</string>
    <string name="register_success_title">회원가입에 성공하였습니다.</string>
    <string name="register_success_content">로그인 후 서비스를 이용해주세요.</string>
    <string name="register_empty_error_title">회원가입 실패</string>
    <string name="register_empty_error_content">빈칸을 채워주세요.</string>
    <string name="register_not_exist_error_title">회원가입 실패</string>
    <string name="register_not_exist_error_content">인증되지 않거나 존재하지 않는 이메일입니다.</string>
    <string name="register_406_error_title">회원가입 실패</string>
    <string name="register_406_error_content">사용 중인 닉네임 혹은 잘못된 비밀번호 형식</string>
    <string name="register_200_fail_content">이메일, 닉네임, 비밀번호를 확인해주세요.</string>
    <string name="login_success_title">로그인에 성공하였습니다.</string>
    <string name="login_success_content">환영합니다!</string>
    <string name="login_fail_title">로그인에 실패했습니다.</string>
    <string name="login_fail_content">닉네임 또는 비밀번호를 확인해주세요.</string>

    <string name="throw_trash">배출하기</string>
    <string name="visual_one_liter">1L</string>
    <string name="visual_five_liter">5L</string>
    <string name="visual_ten_liter">10L</string>
    <string name="setAmount_fail_title">쓰레기를 배출하지 못했어요.</string>
    <string name="setAmount_fail_content">다시 배출해주세요.</string>
    <string name="getAmount_fail_title">쓰레기 배출량을 가져오지 못했어요.</string>
    <string name="getAmount_fail_content">다시 시도해주세요.</string>

    <string name="match">커넥 서비스</string>
    <string name="write_match">글쓰기</string>
    <string name="start_match">커넥하기</string>
    <string name="match_user_name">user name</string>
    <string name="match_user_location">user location</string>

    <string name="start_match_write">나눔하기</string>
    <string name="title_match_write_type">종류</string>
    <string name="match_write_type">ex) 플라스틱 병</string>
    <string name="title_match_write_count">재고</string>
    <string name="match_write_count">ex)2 개</string>
    <string name="title_match_write_location">지역</string>
    <string name="match_write_location">ex) 서울특별시 구로구</string>
    <string name="match_write_url">카카오톡 ID &amp; 오픈채팅 URL</string>


    <string name="post">포스트</string>
    <string name="junkart_challenge">정크 아트 챌린지</string>
    <string name="write_post">포스트 작성하기</string>
    <string name="write_title">제목을 입력해주세요</string>
    <string name="write_text">내용을 입력해주세요</string>
    <string name="original_artist">원본 아티스트</string>
    <string name="name_artist">artist_k</string>
    <string name="start_challenge">챌린지 시작하기</string>
    <string name="upload">올리기</string>
    <string name="name_user">K.junk</string>
    <string name="challenge_ing">{null}의 챌린지를 도전 중입니다!</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
</resources>