<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.MatchFragment">

    <RelativeLayout
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/font_roboto_bold"
                android:text="@string/match"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginTop="40dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/font_roboto_bold"
                android:text="@string/start_match_write"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/match_photo_add"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="90dp"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:background="#00000000"
            android:src="@drawable/ic_match_photo_add" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/match_photo_add">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:fontFamily="@font/font_roboto_bold"
            android:text="@string/title_match_write_type"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="330dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="25dp"
            android:background="@drawable/post_edittext_border"
            android:fontFamily="@font/font_roboto_bold"
            android:hint="@string/match_write_type"
            android:paddingStart="10dp"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/font_roboto_bold"
            android:text="@string/title_match_write_count"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="50dp"
            android:layout_height="35dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/post_edittext_border"
            android:fontFamily="@font/font_roboto_bold"
            android:hint="@string/match_write_count"
            android:paddingStart="10dp"
            android:textSize="10sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="175dp"
            android:layout_marginTop="75dp"
            android:fontFamily="@font/font_roboto_bold"
            android:text="@string/title_match_write_location"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="200dp"
            android:layout_height="35dp"
            android:layout_marginLeft="170dp"
            android:layout_marginTop="100dp"
            android:background="@drawable/post_edittext_border"
            android:fontFamily="@font/font_roboto_bold"
            android:hint="@string/match_write_location"
            android:paddingStart="10dp"
            android:textSize="10sp"
            android:textStyle="bold" />

        <EditText
            android:layout_width="330dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="150dp"
            android:background="@drawable/post_edittext_border"
            android:fontFamily="@font/font_roboto_bold"
            android:hint="@string/match_write_url"
            android:paddingStart="10dp"
            android:textSize="10sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <Button
        android:layout_width="370dp"
        android:layout_height="50dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/font_roboto_bold"
        android:text="@string/start_match_write"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>