<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.LoginFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/font_multicore_pro"
        android:text="@string/logo_text"
        android:textColor="@color/logo_back"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/font_multicore_pro"
        android:text="@string/logo_text"
        android:textColor="@color/primary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/login_name_et"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:elevation="5dp"
        android:layout_marginTop="200dp"
        android:background="@drawable/edittext_border"
        android:paddingStart="15dp"
        android:textSize="14sp"
        android:hint="@string/login_insert_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/login_pass_et"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:elevation="5dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_border"
        android:textSize="14sp"
        android:hint="@string/login_insert_pass_hint"
        android:paddingStart="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_name_et" />

    <Button
        android:id="@+id/login_btn"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginTop="70dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/font_roboto_bold"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_pass_et" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/register_question"
        android:textColor="@color/primary"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_btn" />
    
</androidx.constraintlayout.widget.ConstraintLayout>