<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.RegisterFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/register_prev_ib"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:background="@null"
            android:src="@drawable/ic_arrow_1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="16sp" />

    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/register_name_et"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:elevation="10dp"
        android:layout_marginTop="60dp"
        android:paddingStart="15dp"
        android:textSize="14sp"
        android:background="@drawable/edittext_border"
        android:hint="@string/register_nick_name_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar" />

    <EditText
        android:id="@+id/register_pass_et"
        android:layout_width="360dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/edittext_border"
        android:elevation="10dp"
        android:hint="@string/register_pass_hint"
        android:paddingStart="15dp"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_name_et" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-15dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/font_multicore_pro"
        android:text="@string/logo_text"
        android:textColor="@color/logo_back"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="160dp"
        android:fontFamily="@font/font_multicore_pro"
        android:text="@string/logo_text"
        android:textColor="@color/primary"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_pass_et" />

    <Button
        android:id="@+id/register_btn"
        android:layout_width="360dp"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/button_border"
        android:fontFamily="@font/font_roboto_bold"
        android:text="@string/start"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>